---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/functions/test_function_as_function_parameter.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/functions/test_function_as_function_parameter.c"
   (function-definition external
      plus_1~0 `fn(x: int) -> int`
      (params
         x~2 `int`)
      (compound-statement
         (return (add `int` (x~2 `int`) (1 `int`)))))
   (declaration external f~3 `fn(callback: ptr<fn(∅: int) -> int>) -> int` ∅)
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn(callback: ptr<fn(∅: int) -> int>) -> int>`
                  (f~3 `fn(callback: ptr<fn(∅: int) -> int>) -> int`))
               (addressof `ptr<fn(x: int) -> int>`
                  (plus_1~0 `fn(x: int) -> int`))))))
   (function-definition external
      f~3 `fn(callback: ptr<fn(∅: int) -> int>) -> int`
      (params
         callback~8 `ptr<fn(∅: int) -> int>`)
      (compound-statement
         (return
            (call `int` (callback~8 `ptr<fn(∅: int) -> int>`)
               (call `int` (callback~8 `ptr<fn(∅: int) -> int>`)
                  (42 `int`)))))))

----- stderr -----
